SUBDIRS = src

sbiglibdir = $(libdir)/sbig-util

sbiglib_DATA = $(top_srcdir)/$(sdk_libdir)/libsbigudrv.so

EXTRA_DIST = \
	META \
	README.md \
	$(top_srcdir)/sdk/app/sbigudrv.h \
	$(top_srcdir)/sdk/libs/arm_v6/libsbigudrv.so \
	$(top_srcdir)/sdk/libs/arm_v7/libsbigudrv.so \
	$(top_srcdir)/sdk/libs/arm_v8/libsbigudrv.so \
	$(top_srcdir)/sdk/libs/x86_64/libsbigudrv.so \
	$(top_srcdir)/sdk/libs/i386/libsbigudrv.so \
	$(top_srcdir)/sdk/firmware/sbigfcam.hex \
	$(top_srcdir)/sdk/firmware/sbiglcam.hex \
	$(top_srcdir)/sdk/firmware/sbigpcam.hex \
	$(top_srcdir)/sdk/firmware/sbigucam.hex \
	$(top_srcdir)/sdk/firmware/stfga.bin \
	$(top_srcdir)/sdk/udev/51-sbig-debian.rules
