AM_CFLAGS = @GCCWARN@

AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/sdk/app

noinst_LTLIBRARIES = libsbig.la

libsbig_la_SOURCES = \
	handle.c \
	handle.h \
	handle_impl.h \
	driver.c \
	driver.h \
	camera.c \
	camera.h \
	cfw.c \
	cfw.h \
	ao.c \
	ao.h \
	temp.c \
	temp.h \
	sbfits.c \
	sbfits.h \
	sbig.h
